# ProiectPoo2

./: CMakeLists.txt  Fruct.cpp  Fruct.h  FructePraji.cpp  FructePraji.h  PrajiAbstracta.cpp  PrajiAbstracta.h  Prajitura.cpp  Prajitura.h  README.md  VeganPraji.cpp  VeganPraji.h  exceptie1.cpp  exceptie1.h  exceptie2.cpp  exceptie2.h  main.cpp
