cmake_minimum_required(VERSION 3.27)
project(untitled9)

set(CMAKE_CXX_STANDARD 17)

add_executable(untitled9 main.cpp
        PrajiAbstracta.cpp
        PrajiAbstracta.h
        Prajitura.cpp
        Prajitura.h
        Fruct.cpp
        Fruct.h
        FructePraji.cpp
        FructePraji.h
        VeganPraji.cpp
        VeganPraji.h
        exceptie1.cpp
        exceptie1.h
        exceptie2.cpp
        exceptie2.h
        PrajiAbstracta.cpp
        PrajiAbstracta.h
        PrajiAbstracta.cpp
        PrajiAbstracta.cpp)
